--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,11 @@ import(mclust)
 import(monocle)
 import(parallel)
 import(plot3D)
+import(scater)
 importFrom(DelayedArray,isEmpty)
+importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,colData)
 importFrom(dbscan,dbscan)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
