add import package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Author: Weiyan Chen, Andrew E Teschendorff
 Maintainer: Weiyan Chen <chenweiyan1208@gmail.com>
 Depends: R (>= 3.5)
 Imports: cluster, corpcor, igraph, isva, mclust, parallel, stats,
-        grDevices, graphics, marray, scater, Biobase,
+        grDevices, graphics, marray, scater, Biobase, BiocGenerics,
         SummarizedExperiment, SingleCellExperiment, Rtsne, irlba,
         plot3D, MASS, dbscan, monocle, DelayedArray, Matrix
 Suggests: roxygen2, BiocStyle, knitr, rmarkdown, testthat
