--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ import(monocle)
 import(parallel)
 import(plot3D)
 import(scater)
+importFrom(BiocGenerics,estimateSizeFactors)
 importFrom(DelayedArray,isEmpty)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,assay)
