--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ importFrom(igraph,graph.adjacency)
 importFrom(isva,EstDimRMT)
 importFrom(marray,maPalette)
 importFrom(scater,librarySizeFactors)
-importFrom(scater,normalise)
+importFrom(scater,normalize)
 importFrom(stats,as.dist)
 importFrom(stats,cor)
 importFrom(stats,median)
