--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,10 @@
 export(CompSRana)
 export(DoIntegPPI)
 export(DoLandSCENT)
+export(InferLandmark)
+export(InferPotency)
 export(Plot_CellSR)
 export(Plot_LandSR)
-export(PotencyInfer)
 import(Biobase)
 import(MASS)
 import(Matrix)
