--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,4 +42,5 @@ importFrom(stats,cor)
 importFrom(stats,median)
 importFrom(stats,pnorm)
 importFrom(stats,sd)
+importFrom(stats,var)
 importFrom(stats,wilcox.test)
