--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Imports: cluster, corpcor, igraph, isva, mclust, parallel, stats,
         grDevices, graphics, marray, scater, Biobase, BiocGenerics,
         SummarizedExperiment, SingleCellExperiment, Rtsne, irlba,
         plot3D, MASS, dbscan, monocle, DelayedArray, Matrix, destiny,
-        ggplot2
+        ggplot2, ggthemes
 Suggests: roxygen2, BiocStyle, knitr, rmarkdown, testthat
 VignetteBuilder: knitr
 License: GPL-3
