--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(dbscan,dbscan)
 importFrom(destiny,DPT)
 importFrom(destiny,DiffusionMap)
 importFrom(destiny,eigenvectors)
+importFrom(destiny,plot)
 importFrom(ggthemes,geom_rangeframe)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
